--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,9 @@ readme = "README.md"
 python = "^3.10"
 uuid = "^1.30"
 drf-spectacular = "^0.24.1"
+pip = "^22.2.2"
+install = "^1.3.5"
+django-environ = "^0.9.0"
 
 
 [build-system]
